Refactor: TempEvaluation RDBMS -> Redis 사용하게 변경