@@ -4,6 +4,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import skala.skoro.domain.employee.entity.Employee;
+import skala.skoro.domain.employee.entity.Role;
+import skala.skoro.domain.employee.entity.Team;
 import skala.skoro.domain.employee.service.EmployeeService;
 import skala.skoro.domain.evaluation.dto.TempEvaluationRequest;
 import skala.skoro.domain.evaluation.dto.TempEvaluationResponse;
@@ -11,8 +13,7 @@ import skala.skoro.domain.evaluation.entity.TempEvaluation;
 import skala.skoro.domain.evaluation.repository.TempEvaluationRepository;
 import skala.skoro.global.exception.CustomException;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.Optional;
+import java.util.stream.StreamSupport;
 
 import static skala.skoro.global.exception.ErrorCode.TEMP_EVALUATION_NOT_EXISTS;
 
@@ -26,23 +27,25 @@ public class TempEvaluationService {
     private final TempEvaluationRepository tempEvaluationRepository;
 
     @Transactional(readOnly = true)
-    public List<TempEvaluationResponse> getTeamTempEvaluations(Long teamEvaluationId, String empNo) {
-        Employee employee = employeeService.findEmployeeByEmpNo(empNo);
+    public List<TempEvaluationResponse> getTeamTempEvaluations(String empNo) {
+        Team team = employeeService.findEmployeeByEmpNo(empNo).getTeam();
 
-        return employeeService.findByTeam(employee.getTeam()).stream()
-                .map(teamMember -> tempEvaluationRepository.findByEmployeeAndTeamEvaluation_Id(teamMember, teamEvaluationId))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
+        List<String> empNos = employeeService.findByTeam(team).stream()
+                .filter(employee -> Role.MEMBER.equals(employee.getRole()))
+                .map(Employee::getEmpNo)
+                .toList();
+
+        Iterable<TempEvaluation> tempEvaluations = tempEvaluationRepository.findAllById(empNos);
+
+        return StreamSupport.stream(tempEvaluations.spliterator(), false)
                 .map(TempEvaluationResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void updateTeamMemberTempEvaluations(Long teamEvaluationId, String empNo, TempEvaluationRequest request) {
-        Employee employee = employeeService.findEmployeeByEmpNo(empNo);
-
-        TempEvaluation previous = tempEvaluationRepository.findByEmployeeAndTeamEvaluation_Id(employee, teamEvaluationId)
+    public void updateTeamMemberTempEvaluations(String empNo, TempEvaluationRequest request) {
+        TempEvaluation previous = tempEvaluationRepository.findByEmpNo(empNo)
                 .orElseThrow(() -> new CustomException(TEMP_EVALUATION_NOT_EXISTS));
 
-        previous.updateTempEvaluation(request);
+        tempEvaluationRepository.save(TempEvaluation.of(empNo, request, previous));
     }
 }
